# kastore

./: .codecov.yml  .gitignore  .mergify.yml  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.rst  README.md  appveyor.yml  codecov.yml  prek.toml  prototype.py
.circleci/: config.yml
.github/workflows/: docs.yml  lint.yml  release-c.yml  release.yml  tests.yml  wheels.yml
c/: CHANGELOG.rst  cpp_tests.cpp  example.c  io_tests.c  kastore.c  kastore.h  malloc_tests.c  meson.build  tests.c
docker/: buildwheel.sh
docs/: Makefile  _config.yml  _toc.yml  build.sh  c-api.rst  conf.py  development.rst  examples.py  format.rst  index.rst  installation.rst  introduction.rst  python-api.rst  rtd_requirements.txt
docs/doxygen/: Doxyfile
python/: CHANGELOG.rst  MANIFEST.in  Makefile  README.rst  _kastoremodule.c  make_standard_files.py  pyproject.toml  setup.cfg  setup.py  stress_lowlevel.py
python/kastore/: __init__.py  __main__.py  _version.py  cli.py  exceptions.py  store.py
python/kastore/include/: kastore.h
python/release/: build-wheels.sh  docker-build-wheels.sh
python/release/wheelhouse/: README
python/requirements/: development.txt
python/requirements/CI/tests/: requirements.txt
python/tests/: test_cli.py  test_errors.py  test_file_format.py  test_fileobj.py  test_info.py  test_interface.py  test_lowlevel.py  test_python_c.py  test_standard_files.py  test_storage.py
test-data/malformed/: array_len_outside_file.kas  array_offset_outside_file.kas  bad_array_start_-1.kas  bad_array_start_-8.kas  bad_array_start_1.kas  bad_array_start_8.kas  bad_filesize_0_-1.kas  bad_filesize_0_1.kas  bad_filesize_0_1024.kas  bad_filesize_10_-1.kas  bad_filesize_10_1.kas  bad_filesize_10_1024.kas  bad_key_start_-1.kas  bad_key_start_1.kas  bad_magic_number.kas  bad_type_11.kas  bad_type_16.kas  bad_type_20.kas  bad_type_9.kas  key_len_outside_file.kas  key_offset_outside_file.kas  truncated_file.kas  truncated_file_correct_size_100.kas  truncated_file_correct_size_128.kas  truncated_file_correct_size_129.kas  truncated_file_correct_size_200.kas  version_0.kas  version_100.kas
test-data/v1/: all_types_0_elements.kas  all_types_1_elements.kas  all_types_2_elements.kas  all_types_3_elements.kas  all_types_4_elements.kas  all_types_5_elements.kas  all_types_6_elements.kas  all_types_7_elements.kas  all_types_8_elements.kas  all_types_9_elements.kas
