[build-system]
requires = ["setuptools>=45", "wheel", "numpy>=2"]
build-backend = "setuptools.build_meta"

[project]
name = "kastore"
dynamic = ["version"]
authors = [
    {name = "Tskit Developers", email = "admin@tskit.dev"},
]
description = "A write-once-read-many store for simple numerical data"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
]
keywords = ["binary store", "numerical", "arrays"]
dependencies = [
    "numpy>=2",
    "humanize",
]
requires-python = ">=3.11"

[dependency-groups]
test = [
    "attrs",
    "build", 
    "hypothesis",
    "pytest",
    "pytest-cov",
    "mock",
    "setuptools",
]

# Fully pin lint requirements for determinism. 
lint = [
    "clang-format==21.1.8",
    "ruff==0.15.1",
    "prek==0.3.3",
]

dev = [
    {include-group = "docs"},
    {include-group = "lint"},
    {include-group = "test"},
]

docs = [
    "jupyter-book",
]

[project.urls]
Homepage = "https://github.com/tskit-dev/kastore"
Documentation = "https://kastore.readthedocs.io/en/latest/"
Changelog = "https://kastore.readthedocs.io/en/latest/changelogs.html"
"Bug Tracker" = "https://github.com/tskit-dev/kastore/issues"
GitHub = "https://github.com/tskit-dev/kastore"

[project.scripts]
kastore = "kastore.__main__:main"

[tool.setuptools]
packages = ["kastore"]

[tool.setuptools.dynamic]
version = {attr = "kastore._version.kastore_version"}

[tool.pytest.ini_options]
testpaths = ["tests"]
