[build-system]
requires = ["setuptools>=45", "wheel", "numpy>=2"]
build-backend = "setuptools.build_meta"

[project]
name = "kastore"
dynamic = ["version"]
authors = [
    {name = "Tskit Developers", email = "admin@tskit.dev"},
]
description = "A write-once-read-many store for simple numerical data"
readme = "README.md"
license = "MIT"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
]
keywords = ["binary store", "numerical", "arrays"]
dependencies = [
    "numpy>=2",
    "humanize",
]
requires-python = ">=3.11"

[dependency-groups]
test = [
    "attrs",
    "setuptools",
    "build", 
    "hypothesis",
    "pytest",
    "pytest-cov",
    "pytest-xdist",
    "mock",
]

# Fully pin lint requirements for determinism. 
lint = [
    "clang-format==21.1.8",
    "ruff==0.15.1",
    "prek==0.3.3",
]

docs = [
    "jupyter-book",
]

dev = [
    {include-group = "docs"},
    {include-group = "lint"},
    {include-group = "test"},
]

[project.urls]
Homepage = "https://github.com/tskit-dev/kastore"
Documentation = "https://kastore.readthedocs.io/en/latest/"
Changelog = "https://kastore.readthedocs.io/en/latest/changelogs.html"
"Bug Tracker" = "https://github.com/tskit-dev/kastore/issues"
GitHub = "https://github.com/tskit-dev/kastore"

[project.scripts]
kastore = "kastore.__main__:main"

[tool.setuptools]
packages = ["kastore"]
include-package-data=false

[tool.setuptools.dynamic]
version = {attr = "kastore._version.kastore_version"}

[tool.pytest.ini_options]
testpaths = ["tests"]


[tool.ruff]
# Assume Python 3.11
target-version = "py311"

line-length = 89
indent-width = 4

[tool.ruff.lint]
select = ["E", "F", "B", "W", "I", "N", "UP", "A", "PT"]

ignore = [
    "A001", "A002", "RUF",
    "B905", #Don't add strict=False to zips (B905)
    "UP032", # Don't upgrade to f strings
    # "E741", # using 'l' as a variable name
    # "N806", "N802", "N803", # Various nags about uppercase vars
    # "N818", # Exceptions not called "Error"
    # "UP031", # Allow old-skool format specifiers
    # "B904", # raise from-issues
    "PT006", # Wrong type passed to first argument of `pytest.mark.parametrize`
    # "PT007", # Wrong values type in `pytest.mark.parametrize` expected `list` of `tuple`
    "PT009", # Replace `assertAlmostEqual(...)` with `assert ...`
    "PT027", # Replace `assertRaises` with `pytest.raises`
    # "PT018", # Assertion should be broken down into multiple parts
    # "PT030", # `pytest.warns(UserWarning)` is too broad, set the `match`
    # "PT009", # pytest.raises(ValueError) too broad
    "PT011", # pytest.raises(ValueError) too broad
    "PT012", # pytest.raises() block should contain a single simple statement
    # # "B028", # No stacklevel for warnings
    # "B018", # Found useless expression. Either assign it
    # "PT031", # `pytest.warns()` block should contain a single simple statement
]

fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.isort]
known-first-party = ["_tskit", "tskit", "lwt_interface"]
known-third-party = [
  "msprime",
  "numpy",
  "pytest",
]
