[metadata]
name = kastore
author = Tskit Developers
author_email = admin@tskit.dev
license = MIT
# NOTE: description *must* be on one line.
description = A write-once-read-many store for simple numerical data
long_description_content_type = text/markdown
long_description = file: README.md
url = https://github.com/tskit-dev/kastore
project_urls =
    Documentation = https://kastore.readthedocs.io/en/latest/
    Changelog = https://kastore.readthedocs.io/en/latest/changelogs.html
    Bug Tracker = https://github.com/tskit-dev/kastore/issues
    GitHub = https://github.com/tskit-dev/kastore
classifiers =
        Development Status :: 5 - Production/Stable
        Intended Audience :: Developers
        Topic :: Scientific/Engineering :: Bio-Informatics
        License :: OSI Approved :: MIT License
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.9
        Programming Language :: Python :: 3.10
        Programming Language :: Python :: 3.11
        Programming Language :: Python :: 3.12
        Programming Language :: Python :: 3 :: Only
keywords =
    binary store
    numerical
    arrays
platforms =
    POSIX
    Windows
    MacOS X

[options]
packages = kastore
python_requires = >=3.9
include_package_data = False
# Follow https://numpy.org/doc/stable/dev/depending_on_numpy.html#numpy-2-abi-handling
install_requires =
    numpy>=1.23.5
    humanize

[options.entry_points]
console_scripts =
    kastore=kastore.__main__:main

[tool:pytest]
testpaths =
    tests
